--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,53 +1,51 @@
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [package]
 name = "Rwirret"
 version = "0.1.0"
 authors = ["Kaio Matos <kaio_matos22@hotmail.com>"]
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[workspace]
+members = [".", "entity", "migration"]
+resolver = "2"
+
+[workspace.dependencies]
+sea-orm = { version = "1.1.12", features = [
+  "sqlx-postgres",
+  "runtime-async-std-native-tls",
+  "macros",
+] }
+
 
 [dependencies]
+entity = { path = "entity", optional = true }
+migration = { path = "migration", optional = true }                # depends on your needs
+sea-orm = { workspace = true, optional = true }
 anyhow = "1.0.98"
 async-trait = { version = "0.1.88", optional = true }
 axum = { version = "0.7.0", optional = true }
-axum_session = { version = "0.12.1", optional = true }
-axum_session_auth = { version = "0.12.1", features = [
-  "sqlite-rustls",
-], optional = true }
-# axum_session_sqlx = { version = "0.5.0", features = [
-#   "sqlite",
-# ], optional = true }
 dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
 dioxus-cli-config = { version = "0.6.3", optional = true }
 http = { version = "1.3.1", optional = true }
 serde = "1.0.219"
-sqlx = { version = "0.7.0", features = [
-  "macros",
-  "migrate",
-  "postgres",
-  "sqlite",
-  "_unstable-all-types",
-  "tls-native-tls",
-  "runtime-tokio",
-], optional = true }
 tokio = { version = "1.45.1", optional = true }
 tower = { version = "0.5.2", optional = true }
 tower-http = { version = "0.6.4", optional = true }
+dotenv = "0.15.0"
 
 
 [features]
 default = []
 server = [
   "dioxus/server",
+  "dep:entity",
+  "dep:migration",
   "dep:dioxus-cli-config",
   "dep:axum",
   "dep:tokio",
   "dep:tower-http",
   "dep:async-trait",
-  "dep:sqlx",
-  "dep:axum_session",
-  "dep:axum_session_auth",
-  # "dep:axum_session_sqlx",
+  "dep:sea-orm",
   "dep:http",
   "dep:tower",
 ]
