--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,29 @@ services:
     tty: true
     volumes:
       - .:/usr/src/app
+    depends_on:
+      - "db"
+
+  db:
+    image: postgres
+    restart: always
+    # set shared memory limit when using docker compose
+    shm_size: 128mb
+    # or set shared memory limit when deploy via swarm stack
+    #volumes:
+    #  - type: tmpfs
+    #    target: /dev/shm
+    #    tmpfs:
+    #      size: 134217728 # 128*2^20 bytes = 128Mb
+    ports:
+      - 5432:5432
+    environment:
+      POSTGRES_USER: rwirrer
+      POSTGRESS_DB: rwirrer
+      POSTGRES_PASSWORD: example
+
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 4000:8080
